--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -33,5 +33,8 @@
         <item>CSP</item>
         <item>RRP</item>
     </string-array>
+    
+    <string name="where_txt_customer">Customer (Optional)</string>
+    <string name="where_txt_mileage">Mileage (Optional)</string>
 
 </resources>
