formatting, comments, async server call for operators in MainActivity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="who_michelle">Michelle Stewart</string>
     <string name="who_brian">Brian Williamson</string>
     <string name="who_eric">Eric Bower</string>
+    <string name="who_next">Next</string>
     
     <string name="title_activity_when">When did you see him?</string>
     <string name="when_view"></string>
